# LLMFlowOptimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pre-commit.yml
.github/workflows/: pre-commit.yml  test.yml
configs/: run.yaml  tune.yaml
configs/evaluation/: default.yaml
configs/experiment/: example.yaml
configs/extras/: default.yaml
configs/hparams_search/: custom-search-space-objective.py  optuna.yaml
configs/model/: default.yaml  sample.yaml
configs/model/embedding/: OpenAI.yaml
configs/model/llm/: ChatOpenAI.yaml  GPT4.yaml
configs/model/llm_for_answer/: ChatOpenAI.yaml  OpenAI.yaml
configs/model/text_splitter/: CharacterTextSplitter.yaml  RecursiveCharacter.yaml
configs/paths/: default.yaml
data/evaluation/: NY_eval_data.json
documents/: TODO.md
llmflowoptimizer/: run.py  tune.py
llmflowoptimizer/component/evaluation/: sample.py
llmflowoptimizer/component/model/: sample_qa.py
llmflowoptimizer/models/: evaluation.py  sample_qa.py
llmflowoptimizer/models/components/: base.py
llmflowoptimizer/utils/: utils.py
llmflowtuner/: tune.py
llmflowtuner/models/: evaluation.py  sample_qa.py
llmflowtuner/models/components/: base.py
notebooks/: LLMFlowOptimizer_tutorial_notebook.ipynb  register_data_langsmith.ipynb  tutorial_notebook.ipynb
tests/: conftest.py  test_config.py
