[tool.poetry]
name = "llmflowoptimizer"
version = "0.1.0"
description = ""
authors = ["Yongtae <yong723.enjoy.everything@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.300"
openai = "^0.28.0"
tiktoken = "^0.5.1"
ragas = "^0.0.14"
hydra-core = "^1.3.2"
chromadb = "^0.4.12"
black = "^23.9.1"
rootutils = "^1.0.7"
optuna = "^3.3.0"
rich = "^13.5.3"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
langsmith = "^0.0.40"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
